--- a/Laptop/src/assets/font/stylesheet.css
+++ b/Laptop/src/assets/font/stylesheet.css
@@ -11,7 +11,7 @@
     font-family: 'Stem';
     src: url('Stem-Bold.woff2') format('woff2'),
         url('Stem-Bold.woff') format('woff');
-    font-weight: bold;
+    font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
@@ -29,7 +29,7 @@
     font-family: 'Stem';
     src: url('Stem-Regular.woff2') format('woff2'),
         url('Stem-Regular.woff') format('woff');
-    font-weight: normal;
+    font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
