--- a/Laptop/src/index.css
+++ b/Laptop/src/index.css
@@ -15,6 +15,7 @@
   -moz-osx-font-smoothing: grayscale;
   --Elements-Light-Border: #0000001A;
   --Yellow-text:#FCDF00;
+  --Text-blue:#1A236E;
   
 }
 
